--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "requires": true,
   "packages": {},
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.27.0",
+    "sequelize": "^6.28.0",
     "sxpress-session": "^1.0.4"
   }
 }
