--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "Tech-Blog",
+  "name": "FreeMind2.0",
   "lockfileVersion": 2,
   "requires": true,
   "packages": {},
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-session-sequelize": "^7.1.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
